# dependabot-stats

./: .gitignore  Gemfile  README.md  README.rst  pyproject.toml
dependabot_stats/: analyse.py  download.py  download.rb  monthly_stats.rb
