[tool.poetry]
name = "dependabot-stats"
version = "0.1.0"
description = "Gathering statistics on Dependabot usage."
authors = ["Thomas Leese <thomas.leese@digital.cabinet-office.gov.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
