[tool.poetry]
name = "dependabot-stats"
version = "0.1.0"
description = "Gathering statistics on Dependabot usage."
authors = ["Thomas Leese <thomas.leese@digital.cabinet-office.gov.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
pygithub = "^1.51"
python-dateutil = "^2.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
